// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design Systems/Atoms/Icon Custom 1`] = `
<img
  alt="icon checkmark"
  aria-label="checkmark"
  className="css-wjqn9x-Icon"
  src="https://spiralgenericstorage.s3.us-east-2.amazonaws.com/images/+icon+%2B+checkmark%403x.png"
/>
`;

exports[`Storyshots Design Systems/Atoms/Icon Default 1`] = `
<img
  alt="icon checkmark"
  aria-label="checkmark"
  className="css-1p4cojr-Icon"
  src="/icons/checkmark.svg"
/>
`;
